# spell-mutator

./: Cargo.toml  README.md  config.json  diagnostics.txt  mutated spells.txt  mutated words.txt  overrides.json  spells_mutated.json  spells_mutated.md  spells_mutated.txt  spells_raw.txt
assets/: config.json  overrides.json  spells.json
crates/format/: Cargo.toml
crates/format/src/: main.rs
crates/rawparse/: Cargo.toml
crates/rawparse/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
dicts/12dicts-6.0.2/Lemmatized/: 2+2+3frq.txt  2+2+3lem.txt
dicts/alt12dicts-2020.12.07/: 2of12id.txt  CHANGELOG
rawparse/: Cargo.toml
rawparse/src/: main.rs
src/: diagnostics.rs  format.rs  main.rs  mutation.rs  spellcheck.rs
src/mutation/: add_char.rs  change_char.rs  mutate_string.rs  remove_char.rs
src/spellchecking/: freq.rs  lemma.rs  mod.rs  old.rs
