workspace = { members = ["crates/format","crates/rawparse","crates/types"] }

[package]
name = "spell-mutator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zspell = "0.5.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
types = {path = "crates/types" }
itertools = "0.13.0"