workspace = { members = ["crates/rawparse","crates/types"] }

[package]
name = "spell-mutator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zspell = "0.5.5"
serde_json = "1.0.116"
types = {path = "crates/types" }
itertools = "0.14.0"
humantime = "2.1.0"
peg = "0.8.5"
rayon = "1.11.0"
dashmap = { version = "6.1.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
rapidhash = "4.1.0"